# daily-planner

./: README.md
fastapi-vue-app/: .gitignore  docker-compose.development.yml  docker-compose.yml
fastapi-vue-app/backend/: Dockerfile  pyproject.toml  requirements.txt
fastapi-vue-app/backend/app/: database.py  main.py  models.py  repositories.py  routes.py  services.py
fastapi-vue-app/backend/app/api/: dependencies.py  router.py
fastapi-vue-app/backend/app/api/v1/: router.py
fastapi-vue-app/backend/app/api/v1/endpoints/: config.py  tasks.py
fastapi-vue-app/backend/routes/: tasks.py
fastapi-vue-app/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
fastapi-vue-app/frontend/src/: App.vue  main.ts  types.ts
fastapi-vue-app/frontend/src/components/: TaskList.vue  TaskRow.vue
